syntax = "proto3";
package helloworld;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
   string message = 1;
}

message HelloResponse {
    string message = 1;
}